# learning-ml

./: .gitignore  pyproject.toml
learning_ml/: __init__.py
learning_ml/hw3/: data.py  test.py  train.py
learning_ml/hw4/: __init__.py  data.py  model.py  test.py  train.py
learning_ml/hw6/: Unet_students.ipynb  predict.py  train.py
learning_ml/hw6/pyimagesearch/: model.py
learning_ml/sem5/: Conv_+Video_Classification_students.ipynb  SE_block.ipynb
learning_ml/sem7/: Copy_of_Mirea_4_for_students.ipynb  MIREA_4_VIT.ipynb
