[tool.poetry]
name = "learning-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torchvision = {version = "^0.16.0+cpu", source = "pytorch"}
matplotlib = "^3.8.0"
torch = {version = "^2.1.0+cu118", source = "pytorch"}
wandb = "^0.15.12"


[[tool.poetry.source]]
name = "learning-ml"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"